Fixed tag spacing

--- a/src/styles/partials/_post-page.scss
+++ b/src/styles/partials/_post-page.scss
@@ -55,6 +55,7 @@
     margin-bottom: 10px;
     a {
       text-decoration: none;
+      padding-right: 5px;
       &:hover {
         opacity: .8;
       }
